Fixed layout bug with logo text

--- a/source/Sordid.Web/Content/site/site.css
+++ b/source/Sordid.Web/Content/site/site.css
@@ -10,8 +10,6 @@
 }
 
 #logoLink {
-    margin-left: -15px;
-    padding-bottom: 8px;
     padding-left: 0;
 }
 
